# readit

./: README.md  books.http  main.py  pyproject.toml
.github/workflows/: lint.yml
app/routers/: __init__.py  books.py  feed.py
